# ms-iibdcc

./: .gitignore  README.md
docs/: index.html
m1/s1/agentic-ai/tp1/: README.md  prompt.ipynb  pyproject.toml
m1/s1/agentic-ai/tp2/: agent.ipynb  chef_personnel.ipynb  pyproject.toml
m1/s1/agentic-ai/tp3/: pyproject.toml  rag.ipynb
m1/s1/agentic-ai/tp4/: README.md  agentMCPTime.py  mcpAgent.py  mcpAgentStreaming.py  pyproject.toml
m1/s1/agentic-ai/tp5/: README.md  agent_simple.py  mlta-langgraph.json  multi_agents.py  pyproject.toml  sa-langgraph.json
m1/s1/agentic-ai/tp6/: pyproject.toml  state_context.ipynb
m1/s1/agentic-ai/tp7/: hitl.ipynb  pyproject.toml
m1/s1/agentic-ai/tp8/: README.md  conditional_workflow.py  hello_graph.py  message_state.py  pyproject.toml  reducers_demo.py  two_step_workflow.py  workflow_loop.py
m1/s1/agentic-ai/tp9/: README.md  agent_node.py  human_in_the_loop.py  pyproject.toml  tools_setup.py  tp_synthese.py
m1/s1/archi-jee-system-distribue/project/: generate_data.py
m1/s1/base-poo-java/GestionBancaire/: Client.java  Compte.java  Operation.java  Program.java
m1/s1/base-poo-java/GestionSalaries/: Departement.java  Program.java  Salarie.java
m1/s1/big-data/tp2/: docker-compose.yml  readme.md
m1/s1/big-data/tp3/: pom.xml  rentals.csv
m1/s1/big-data/tp4/: app.py  data.csv  docker-compose.yaml  key-hadoop.pem
m1/s1/big-data/tp5/: compose.yml  pom.xml  readme.md
m1/s1/big-data/tp5-kafka/: pom.xml  readme.md  weather-data.csv
m1/s1/big-data/tp6/: compose.yml  readme.md
m1/s1/java-avance-uml/tp1/: readme.md
m1/s1/java-avance-uml/tp2 - Généricité /: Application.java  Produit.java
m1/s1/java-avance-uml/tp2-Genericite /: MetierProduitImpl.java
m1/s1/java-avance-uml/tp4-threads/: ClientHandler.java  MultiThreadServer.java
m1/s1/ml/exam/: devoir_classification.ipynb  devoir_regression.ipynb
m1/s1/mobile-dev/tp1/: readme.md  settings.gradle.kts
m1/s1/mobile-dev/tp3_flutter/: README.md  pubspec.yaml
m1/s1/mobile-dev/tp4_flutter/: README.md  pubspec.yaml
m1/s1/mobile-dev/tp5_chatbot/: README.md  pubspec.yaml
m1/s1/web-technology/tp-php/: config.php  database.sql
m1/s1/web-technology/tp-sessions/: index.php  panier.php
m1/s1/xml-webservices/tp1/: index.html  meteo.dtd  meteo.html  meteo.xml  meteo.xsd  meteo_to_html.xsl  meteo_to_svg.xsl  readme.md
m1/s1/xml-webservices/tp2/: index.html  readme.md  releve.dtd  releve.xml  releve.xsd  releve_credit.html  releve_credit.xsl  releve_totaux.html  releve_totaux.xsl  releve_xsd.xml  tp2.xpr
m1/s1/xml-webservices/tp3/: bankWS-soapui-project.xml  (+1 more)
(+271 files in other folders)
