[project]
name = "tp1"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "ipykernel>=7.3.0",
    "langchain>=1.3.9",
    "langchain-groq>=1.1.3",
    "langchain-ollama>=1.1.0",
    "langchain-openai>=1.3.2",
    "python-dotenv>=1.2.2",
    "tiktoken>=0.13.0",
]

[dependency-groups]
dev = [
    "jupyterlab>=4.5.8",
]
