[project]
name = "tp4"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "ipykernel>=7.3.0",
    "langchain>=1.3.9",
    "langchain-mcp-adapters>=0.3.0",
    "langchain-ollama>=1.1.0",
    "langchain-openai>=1.3.2",
    "langgraph>=1.2.5",
    "mcp>=1.27.2",
    "python-dotenv>=1.2.2",
    "requests>=2.34.2",
    "tavily-python>=0.7.26",
]
