[project]
name = "tp5"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "langchain>=1.3.9",
    "langchain-community>=0.4.2",
    "langchain-ollama>=1.1.0",
    "langgraph>=1.2.5",
    "langgraph-cli[inmem]>=0.4.29",
    "python-dotenv>=1.2.2",
    "wikipedia>=1.4.0",
]
