[project]
name = "tp8"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "ipython>=9.14.1",
    "langchain>=1.3.9",
    "langchain-core>=1.4.7",
    "langchain-ollama>=1.1.0",
    "langgraph>=1.2.5",
    "typing-extensions>=4.15.0",
]
